// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateVibeScore numeric baseline > beginner — 5 streak, 1 unverified, no badge 1`] = `21`;

exports[`calculateVibeScore numeric baseline > diamond with endorsements + review bonus 1`] = `951`;

exports[`calculateVibeScore numeric baseline > flagged project contributes zero 1`] = `35`;

exports[`calculateVibeScore numeric baseline > high-score — 200 streak, 3 projects with quality scores, gold 1`] = `461`;

exports[`calculateVibeScore numeric baseline > legacy path — count-based scoring, no project detail 1`] = `97`;

exports[`calculateVibeScore numeric baseline > shipper — 45 streak, 3 verified projects, bronze 1`] = `125`;

exports[`calculateVibeScore numeric baseline > volume credit: 16k lifetime, 0 recent — addresses Meta's 16k-commit case 1`] = `136`;

exports[`calculateVibeScore numeric baseline > volume credit: active veteran — 50k lifetime, 100 last-30d, gold badge 1`] = `394`;

exports[`calculateVibeScore numeric baseline > volume credit: light user — 200 lifetime, 5 last-30d 1`] = `37`;

exports[`evaluateUser numeric baseline (locks before refactor) > beginner persona — low streak, 1 unverified project 1`] = `
{
  "badge_level": "none",
  "dimensions": {
    "activity_recency": 62,
    "client_outcomes": null,
    "consistency": 19,
    "project_quality": 0,
    "reputation": 3,
    "tech_breadth": 0,
  },
  "overall_score": 0,
  "risks_count": 4,
  "strengths_count": 0,
  "username": "beginner",
}
`;

exports[`evaluateUser numeric baseline (locks before refactor) > diamond persona — top-tier across all dimensions 1`] = `
{
  "badge_level": "diamond",
  "dimensions": {
    "activity_recency": 100,
    "client_outcomes": null,
    "consistency": 100,
    "project_quality": 60,
    "reputation": 100,
    "tech_breadth": 36,
  },
  "overall_score": 60,
  "risks_count": 2,
  "strengths_count": 2,
  "username": "diamond",
}
`;

exports[`evaluateUser numeric baseline (locks before refactor) > high-score gold persona — long streak + quality metrics 1`] = `
{
  "badge_level": "gold",
  "dimensions": {
    "activity_recency": 100,
    "client_outcomes": null,
    "consistency": 100,
    "project_quality": 85,
    "reputation": 100,
    "tech_breadth": 36,
  },
  "overall_score": 85,
  "risks_count": 2,
  "strengths_count": 4,
  "username": "highscore",
}
`;

exports[`evaluateUser numeric baseline (locks before refactor) > inactive persona — zero current streak but past activity 1`] = `
{
  "badge_level": "bronze",
  "dimensions": {
    "activity_recency": 20,
    "client_outcomes": null,
    "consistency": 49,
    "project_quality": 0,
    "reputation": 27,
    "tech_breadth": 0,
  },
  "overall_score": 0,
  "risks_count": 4,
  "strengths_count": 0,
  "username": "inactive",
}
`;

exports[`evaluateUser numeric baseline (locks before refactor) > shipper persona — bronze badge, 3 verified projects 1`] = `
{
  "badge_level": "bronze",
  "dimensions": {
    "activity_recency": 78,
    "client_outcomes": null,
    "consistency": 100,
    "project_quality": 40,
    "reputation": 38,
    "tech_breadth": 36,
  },
  "overall_score": 40,
  "risks_count": 3,
  "strengths_count": 1,
  "username": "shipper",
}
`;

exports[`matchUsers numeric baseline > orders and scores across 5 personas deterministically 1`] = `
[
  {
    "match_score": 86,
    "matched_skills": [
      "React",
      "Typescript",
    ],
    "reasons_count": 4,
    "recommended_for": "MVP development",
    "username": "highscore",
  },
  {
    "match_score": 76,
    "matched_skills": [
      "React",
      "Typescript",
    ],
    "reasons_count": 4,
    "recommended_for": "MVP development",
    "username": "diamond",
  },
  {
    "match_score": 68,
    "matched_skills": [
      "React",
      "Typescript",
    ],
    "reasons_count": 3,
    "recommended_for": "MVP development",
    "username": "shipper",
  },
  {
    "match_score": 0,
    "matched_skills": [],
    "reasons_count": 2,
    "recommended_for": "MVP development",
    "username": "beginner",
  },
  {
    "match_score": 0,
    "matched_skills": [],
    "reasons_count": 2,
    "recommended_for": "MVP development",
    "username": "inactive",
  },
]
`;
